2011-02-11  Andrew Wason  <rectalogic@rectalogic.com>

Reviewed by David Levin.

        Files missing ENABLE_VIDEO #ifdef
        https://bugs.webkit.org/show_bug.cgi?id=53390

        No new tests.

        * html/canvas/WebGLRenderingContext.cpp:
        * html/canvas/WebGLRenderingContext.h:
        * html/canvas/WebGLRenderingContext.idl:
          Wrap methods and declarations that use HTMLVideoElement
          with #if ENABLE(VIDEO).

git-svn-id: svn://svn.chromium.org/blink/trunk@78355 bbb929c8-8fbe-4397-9dbb-9b2b20218538